# advent-of-code

./: .gitignore  README.md  pyproject.toml
2017/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  09.py  10.py  13.py  README.md  d03.py  d06.py  d08.py  d10.py  d11.py  d12.py  d14.py  d15.py  d16.py  d17.py  d18.py  d18b_parallel.py  d19.py  d20.py  d21.py  d22.py  d23.py  d24.py  d25.py  loop.py
2018/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d11_opti.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d20.py  d21.py  d23.py  d24.py
2019/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d07_p1.py  d08.py  d09.py  d10.py  d11.py  d12.py  d14.py  d14blabla.py  d16.py  d17.py  d19.py  d20.py
2020/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d20.py  d21.py  d22.py  d23.py  d24.py  d25.py
2021/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d17.py  d20.py  d22.py  d25.py
2022/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d17.py  d18.py  d20.py  d23.py  d25.py
2023/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d20.py  d21.py  d22.py
2024/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py  d13.py  (+10 more)
(+43 files in other folders)
