[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Max"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.8"
numpy = "^1.23.5"
matplotlib = "^3.6.2"
icecream = "^2.1.3"
arcade = "^2.6.17"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
