[project]
name = "advent-of-code"
version = "0.1.0"
description = "My AoC solutions over the years"
authors = [
    { name = "Max F", email = "hmno@thx.com" }
]
dependencies = [
    "networkx>=3.3",
    "numpy>=1.26.4",
    "matplotlib>=3.8.4",
    "icecream>=2.1.3",
    "arcade>=2.6.17",
    "sympy>=1.12",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/advent_of_code"]
