[project]
name = "advent-of-code"
version = "0.1.0"
description = "My AoC solutions over the years"
authors = [
    { name = "Max F", email = "hmno@thx.com" }
]
dependencies = [
    "arcade>=2.3.15",
    "icecream>=2.1.3",
    "matplotlib>=3.9.2",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "sympy>=1.13.3",
    "z3-solver>=4.13.3.0",
]
readme = "README.md"
requires-python = ">= 3.13"
